# antarctic-system-monitor

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.1ffc9b8  README.md  main.cpp  mainwindow.h
backend/: proc.h  proc.hpp  utils.cpp  utils.hpp
backend/antarcticore-linux/: CMakeLists.txt  allpids.h  processes.h  test.cpp  test.hpp
backend/linux/: proc.cpp
core/: allpids.h  processes.h
frontend/antarctic-qt/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
frontend/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
gui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
utils/: dirstream.h  libc-lock.h
